--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
-## Arguments
+# Arguments
 
     Right now u have to give in all paths of files u want to preprocess as arguments.
 
-    ###Other Options:
+    ##Other Options:
     -just using the Input folder as the set directory where the files to be preprocessed have to sit.
         ** Would take away modularity **
 
